--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "ws": "^7.3.1"
   },
   "main": "server.js",
